--- a/team.html
+++ b/team.html
@@ -5,16 +5,7 @@ title: The Team
 
 {% include smallheader.html %}
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mtxl">Our Story</h1>
-
-<div class="center mw8 phm phl-ns cf lh-copy serif fw1">
-  <p class="f3">Scott Forman and Jeff Kolesky founded OneRoom in the summer of 2014 with 
-  the goal of making online learning more human, intimate, and connected.</p>
-  <p class="f3">We're based in San Francisco, and are part of the 
-  <a class="link" href="http://www.helloinnerspace.org/">Innerspace</a> community of startups.</p>
-</div>
-
-        <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+        <div class="center mw8 phl phn-ns cf b--light-gray ptm mtx">
           <h1 class="fl wi-100 b tc ttu f2 mbs mtx pvl">The OneRoom Team</h1>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
@@ -36,9 +27,9 @@ title: The Team
           </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
-              <img src="img/simon.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
+              <img src="img/luke.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f4 f3-ns">Simon Murtha Smith</h1>
+            <h1 class="mbn f4 f3-ns">Luke Madera</h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
