open in new tab

--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@ title: team
             <div class="phl">
               <img src="img/jeff.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
-            <h1 class="mbn f3"><a href="https://twitter.com/jeffkole?lang=en">Jeff Kolesky</a></h1>
+            <h1 class="mbn f3"><a href="https://twitter.com/jeffkole?lang=en" target="_blank">Jeff Kolesky</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
