open link in new tab

--- a/team.html
+++ b/team.html
@@ -17,42 +17,42 @@ title: team
             <div class="phl">
               <img src="img/scott.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f3"><a href="https://twitter.com/sjforman">Scott Forman</a></h1>
+            <h1 class="mbn f3"><a href="https://twitter.com/sjforman"target="_blank">Scott Forman</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
               <img src="img/samantha.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f4 f3-ns"><a href="https://twitter.com/samanthatoy?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Samantha Warren</a></h1>
+            <h1 class="mbn f4 f3-ns"><a href="https://twitter.com/samanthatoy?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">Samantha Warren</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
               <img src="img/luke.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f4 f3-ns"><a href="https://twitter.com/lukemadera">Luke Madera</a></h1>
+            <h1 class="mbn f4 f3-ns"><a href="https://twitter.com/lukemadera"target="_blank">Luke Madera</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/kayla.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
-            <h1 class="mbn f3"><a href="https://twitter.com/kaylaquock">Kayla Quock</a></h1>
+            <h1 class="mbn f3"><a href="https://twitter.com/kaylaquock"target="_blank">Kayla Quock</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/michael.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
-            <h1 class="mbn f3"><a href="https://twitter.com/mdunkle">Michael Dunkle</a></h1>
+            <h1 class="mbn f3"><a href="https://twitter.com/mdunkle"target="_blank">Michael Dunkle</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/laura.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
-            <h1 class="mbn f3"><a href="https://twitter.com/thelampton">Laura Scott</a></h1>
+            <h1 class="mbn f3"><a href="https://twitter.com/thelampton"target="_blank">Laura Scott</a></h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/joe.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
-            <h1 class="mbn f3"><a href="https://twitter.com/greenstein_joe">Joe Greenstein</a></h1>
+            <h1 class="mbn f3"><a href="https://twitter.com/greenstein_joe" target="_blank">Joe Greenstein</a></h1>
           </article>
         </div>
