Updates writing page to more general <about>.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: how-it-works
   <div class="link">
   </div>
   <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
-    <h1 class="mtn f1 mega-ns fw7 white tc ptn mtl mbm">Online Writing Classes, Humanized</h1>
+    <h1 class="mtn f1 mega-ns fw7 white tc ptn mtl mbm">Online Classes, Humanized</h1>
     <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
@@ -21,14 +21,14 @@ title: how-it-works
   <div class="fl wi-50-ns wi-100 pll">
   <h2 class="f2 fw7 tc ttu">What's this all about?</h2>
   <div class="lh-copy serif center wi-75-ns">
-    <p class="fw1 f3">OneRoom gathers writers from all over the world to collaborate, learn, and write together.</p>
+    <p class="fw1 f3">OneRoom gathers curious people from all over the world to learn together in small, short, highly interactive classes.</p>
     <ul class="fw1 f3">
       <li>Engage with great teachers in a small class</li>
-      <li>Talk face-to-face with other writers</li>
-      <li>Connect with writers, no matter where you happen to be</li>
-      <li>Receive in-person and written feedback on your work</li>
+      <li>Talk face-to-face with other's who share your interests</li>
+      <li>Connect with like-minded people, no matter where you happen to be</li>
+      <li>Get feedback on your creative work</li>
     </ul>
-    <p class="fw1 f3">We're here to help you start your project, hone your craft, and build your writing community.</p>
+    <p class="fw1 f3">We're here to help you start your project, hone your craft, and build your community.</p>
   </div>
   </div>
 
@@ -65,7 +65,7 @@ title: how-it-works
     <article class="fl center">
       <div class="wi-25-ns fl mrl">
         <h1 class="mbn blue"><a name="workshop">Workshop</a></h1>
-        <p class="serif mrm">Focus on readings or student work for discussion.</p>
+        <p class="serif mrm">Focus on student work or inspirational materials for discussion.</p>
       </div>
       <img src="img/workshop.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
     </article>
@@ -94,11 +94,11 @@ title: how-it-works
     <p class="fw1 f3 tc">Shoot!</p>
     <article>
       <h3>Will it work for my schedule?</h3>
-      <p>Probably! Most classes are offered in the evenings Pacific or Eastern, and on weekends. We also have <a class="link" href="https://app.joinoneroom.com/course/?type=micro">microclasses</a>, which are exactly what they sound like. If you don't see a class that works for your schedule, we’re adding new ones all the time.</p>
+      <p>Probably! When you sign up for a class, we'll ask for your scheduling preferences, and do our best to accommodate. New classes are being scheduled all the time.</p>
     </article>
     <article>
       <h3>How much does it cost?</h3>
-      <p>Class prices vary according to the experience of the teacher, but on average they cost about $30 per hour of class time. The price for microclasses is as little as $10.</p>
+      <p>Prices for multi-session classes vary; 20 minute "micro" classes are $5.</p>
     </article>
     <article>
       <h3>Is it safe for introverts?</h3>
