Adds 'How a class works' page

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ title: how-it-works
     <p class="fw1 f3 tc">Shoot!</p>
     <article>
       <h3>Will it work for my schedule?</h3>
-      <p>Probably! When you sign up for a class, we'll ask for your scheduling preferences, and do our best to accommodate. New classes are being scheduled all the time.</p>
+      <p>Probably! When you sign up for a class, we'll ask for your scheduling preferences, and do our best to accommodate. New classes are being scheduled all the time. <a href="how-a-class-works.html">Learn more about how we schedule classes here.</a></p>
     </article>
     <article>
       <h3>How much does it cost?</h3>
