Updates how it works graphic and moves it to homepage

--- a/about.html
+++ b/about.html
@@ -8,11 +8,8 @@ title: How it Works
 <header>
   <div class="link">
   </div>
-  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
-    <h1 class="mtn f1 mega-ns fw7 white tc ptn mtl mbm">Online Classes, Humanized</h1>
-    <div class="tc pam">
-      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
-    </div>
+  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pvl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
+    <h1 class="f1 fw7 white tc pvn">Live, Real-Time Video Classes</h1>
     <hr style="height:0;background:rgba(0,0,0,.1);border:0;" class="mw7 mvn">
   </div>
 </header>
@@ -94,7 +91,7 @@ title: How it Works
     <p class="fw1 f3 tc">Shoot!</p>
     <article>
       <h3>Will it work for my schedule?</h3>
-      <p>Probably! When you sign up for a class, we'll ask for your scheduling preferences, and do our best to accommodate. New classes are being scheduled all the time. <a href="how-a-class-works.html" class="link">Learn more about how we schedule classes here.</a></p>
+      <p>Probably! When you sign up for a class, we'll ask for your scheduling preferences, and do our best to accommodate. New classes are being scheduled all the time.</p>
     </article>
     <article>
       <h3>How much does it cost?</h3>
