--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@ layout: master
   </div>
 </header>
 
-    <main class="pbx-ns">
+    <main>
+      <section class="mvxl mhm">
+        <h2 class="mw-75-ns center f3 fw7 tc dark-blue mbl">OneRoom connects people who are interested in learning the same stuff.</h2>
+        <div class="tc">
+          <img src="img/what-is-oneroom.png" style="max-width: 856px;" />
+        </div>
+      </section>
+
+      <section class="mvxl mhm">
+        <h2 class="mw-75-ns center f3 fw7 tc dark-blue mbl">Sessions usually go something like this.</h2>
+        <div class="tc">
+          <img src="img/typical-class.png" style="max-width: 833px;" />
+          <h4 class="light-silver fw4 mtl">(Sessions are 20 to 45 minutes long)</h4>
+        </div>
+      </section>
+
+      <section class="mbl mtxl mhm">
+        <h2 class="mw-75-ns center f3 fw7 tc dark-blue mbl">Connect with people from anywhere in the world who are passionate about the same topics.</h2>
+        <div class="tc">
+          <img src="img/class-location.png" style="max-width: 650px;" />
+        </div>
+      </section>
+
       <section class="bg-lightest-gray tc center pvl phm">
         <div class="cf mw-100 mw8-ns center">
           <h3 class="f1 tc fw4 silver">Featured Classes</h3>
@@ -30,27 +52,6 @@ layout: master
         <div class="tc pam mts">
           <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse all classes</a>
         </div>
-      </section>
-      <section class="bg-aqua-light tc center pvl">
-        <h3 class="mtn f2 fw4 tc silver mbn mtl">Subscribe to OneRoom News</h3>
-        <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-          <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div class="mc-field-group">
-              <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
-                <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: writer@gmail.com" name="EMAIL"/>
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none;color:#fff"></div>
-                <div class="response" id="mce-success-response" style="display:none;color:#fff"></div>
-              </div>
-              <div class="mtn">
-                <input type="submit" value="Subscribe to OneRoom News" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
-              </div>
-
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_04aed0f3b7" tabindex="-1" value=""></div>
-          </form>
-            </div>
       </section>
     </main>
 
