--- a/index.html
+++ b/index.html
@@ -4,33 +4,61 @@ layout: master
 {% include smallheader.html %}
 
 <header>
-  <div class="link">
-  </div>
-  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
-    <h2 class="mtn f1 mega-ns fw7 white tc ptn mtl mbm">Online Learning, Humanized</h2>
-    <p class="white f3 mw7 mbl center">The best way to learn anything is with other humans. OneRoom makes that possible online - finally. Meet face-to-face and learn together in video classrooms you can access from anywhere.</p>
-    <div class="cf mw-100 mw6-ns center">
-      <div class="video-wrapper">
-        <iframe width="552" height="414" src="https://www.youtube.com/embed/mdGHr765KfE?showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+  <div class="bt b--green center mw-fill-l phm phl-ns pvl bg-cv tc" style="background-image:url(img/room-background.jpg);background-position: center top;">
+    <h2 class="mtn f0 fw7 white ptn mtl mbm">Live, Real-time Video Classes</h2>
+    <p class="white f3 mw7 mbl center">Real humans • Bite-sized classes • $10 or less</p>
+    <a href="http://app.joinoneroom.com/course" class="btn btn--blue pam br3">Browse classes</a>
   </div>
 </header>
 
     <main>
-      {% include howitworks.html %}
 
-      <section class="bg-lightest-gray tc center pvl phm">
+      <!--
+      <section class="tc center pvxl phm">
         <div class="cf mw-100 mw8-ns center">
-          <h3 class="f1 tc fw4 silver">Featured Classes</h3>
-          {% for course in site.data.courses %}
-            <div class="wi-100 wi5-ns fl mlx-ns">
-              {% include coursecard.html %}
-            </div>
-          {% endfor %}
+          <h3 class="f1 tc fw4 silver mtn">What do you want to learn today?</h3>
+          <div class="cf mw-100 mw6-ns center">
+            <a href="" class="btn btn--green pal br3">See the classes</a>
+          </div>
         </div>
-        <div class="tc pam mts">
-          <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse all classes</a>
+      </section>
+      -->
+
+      <section class="pvxl phm bg-aqua-light">
+        <div class="tc wi-100 wi-75-ns center mid-gray f4">
+          <h3 class="f2 tc fw4 silver mtn">What is so great about OneRoom?</h3>
+          <div class="pure-g">
+            <div class="pure-u-1 pure-u-md-1-3 phs">
+              <img src="img/icon-clock.png" style="max-height: 80px; width: auto;">
+              <p>Bite-sized sessions that fit your schedule</p>
+            </div>
+            <div class="pure-u-1 pure-u-md-1-3 phs">
+              <img src="img/icon-group.png" style="max-height: 80px; width: auto;">
+              <p>Interact with real, live humans through your webcam</p>
+            </div>
+            <div class="pure-u-1 pure-u-md-1-3 phs">
+              <img src="img/icon-love.png" style="max-height: 80px; width: auto;">
+              <p>Meet people who nerd-out about the same topics as you</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="tc center pvxl phm">
+        <div class="cf mw-100 mw8-ns center">
+          <h3 class="f2 tc fw4 silver mtn">What does a class look like?</h3>
+          <div class="cf mw-100 mw6-ns center">
+            <div class="video-wrapper">
+              <iframe width="552" height="414" src="https://www.youtube.com/embed/mdGHr765KfE?showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="pvm phm bg-aqua">
+        <div class="tc white">
+          <p class="dib mrm f3">Ready to learn something new?</p>
+          <a href="" class="btn btn--green pam br3">Browse classes</a>
         </div>
       </section>
     </main>
