--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@ layout: master
           <h3 class="f2 tc fw4 silver mtn">What is so great about OneRoom?</h3>
           <div class="pure-g">
             <div class="pure-u-1 pure-u-md-1-3 phs">
-              <img src="img/icon-clock.png" style="max-height: 80px; width: auto;">
-              <p>Bite-sized sessions that fit your schedule</p>
-            </div>
-            <div class="pure-u-1 pure-u-md-1-3 phs">
               <img src="img/icon-group.png" style="max-height: 80px; width: auto;">
               <p>Interact with real, live humans through your webcam</p>
             </div>
             <div class="pure-u-1 pure-u-md-1-3 phs">
               <img src="img/icon-love.png" style="max-height: 80px; width: auto;">
               <p>Meet people who nerd-out about the same topics as you</p>
+            </div>
+            <div class="pure-u-1 pure-u-md-1-3 phs">
+              <img src="img/icon-clock.png" style="max-height: 80px; width: auto;">
+              <p>Bite-sized classes that fit your schedule</p>
             </div>
           </div>
         </div>
