Adds comparison table to homepage

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ layout: master
         </div>
       </section>
 
+      <section class="tc center pvxl phm bg-near-white">
+        <div class="cf mw-100 mw8-ns center">
+          <h3 class="f2 tc fw4 silver mtn">It's the best of taking classes in person with the convenience of online.</h3>
+          {% include comparison-table.html %}
+        </div>
+      </section>
+
       <section class="pvm phm bg-aqua">
         <div class="tc white">
           <p class="dib mrm f3">Ready to learn something new?</p>
