--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: master
         <div class="cf mw-100 mw8-ns center">
           <h3 class="f2 tc fw4 silver mtn">What does a class look like?</h3>
           <div class="cf mw-100 mw6-ns center">
-            <div class="video-wrapper">
+            <div class="video-wrapper bs-solid b--light-gray bw2">
               <iframe width="552" height="414" src="https://www.youtube.com/embed/mdGHr765KfE?showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
