Minor style change to comparison table

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: master
       </section>
       -->
 
-      <section class="pvxl phm bg-aqua-light">
+      <section class="pvxl phm">
         <div class="tc wi-100 wi-75-ns center mid-gray f4">
           <h3 class="f2 tc fw4 silver mtn">What is so great about OneRoom?</h3>
           <div class="pure-g">
@@ -44,7 +44,7 @@ layout: master
         </div>
       </section>
 
-      <section class="tc center pvxl phm">
+      <section class="tc center pvxl phm bg-aqua-light">
         <div class="cf mw-100 mw8-ns center">
           <h3 class="f2 tc fw4 silver mtn">What does a class look like?</h3>
           <div class="cf mw-100 mw6-ns center">
