Updates links to point to www instead of app

--- a/how-a-class-works.html
+++ b/how-a-class-works.html
@@ -20,6 +20,6 @@ title: How do OneRoom classes work?
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
     <p class="f4 f3-ns tc fw1 lh-copy mbn">Find a class now:</p>
     <div class="tc pam">
-      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
+      <a class="btn btn--blue pal br3" href="https://www.joinoneroom.com/">Browse the class catalog</a>
     </div>
 </section>
