--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ redirect_to: http://www.joinoneroom.com
           {% endfor %}
         </div>
         <div class="tc pam mts">
-          <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse all classes</a>
+          <a class="btn btn--blue pal br3" href="https://www.joinoneroom.com/">Browse all classes</a>
         </div>
       </section>
     </main>
